[package]
name = "ebi_optimisation"
version = "0.0.7"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["stochastic-processes", "process-mining", "business-processes"]
categories = ["command-line-utilities"]
description = "Optimisation techniques for Ebi - a stochastic process mining utility"
homepage = "https://ebitools.org"
repository = "https://github.com/BPM-Research-Group/Ebi"
readme = "README.md"
exclude = ["/testfiles", "/manual", ".github/", ".*"]

[lib]
name = "ebi_optimisation"
crate-type = ["cdylib", "lib"]

[features]
default = []
eexactarithmetic = []
exactarithmetic = [ "eexactarithmetic", "ebi_arithmetic/exactarithmetic" ]
approximatearithmetic = [ "eapproximatearithmetic", "ebi_arithmetic/approximatearithmetic" ]
eapproximatearithmetic = []

[dependencies]
ebi_arithmetic = "0.2.16"
anyhow = "1.0.99"
ndarray = "0.16.1"
sprs = "0.11.3"
indexmap = "2.11.0"
rustc-hash = "2.1.1"
log = "0.4.27"
rayon = "1.11.0"
rand = "0.8.5"
parking_lot = "0.12.4"
pathfinding = "4.14.0"
malachite = "0.6.1"

[profile.release]
debug = false
strip = true
panic = 'abort'
opt-level = 3
lto = true
codegen-units = 1