[package]
name = "ebi_optimisation"
version = "0.3.2"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["stochastic-processes", "process-mining", "business-processes"]
categories = ["command-line-utilities"]
description = "Optimisation techniques for Ebi - a stochastic process mining utility"
homepage = "https://ebitools.org"
repository = "https://github.com/BPM-Research-Group/Ebi"
readme = "README.md"
exclude = ["/testfiles", "/manual", ".github/", ".*"]

[lib]
name = "ebi_optimisation"
crate-type = ["cdylib", "lib"]

[features]
default = []
eexactarithmetic = []
exactarithmetic = [ "eexactarithmetic", "ebi_arithmetic/exactarithmetic" ]
approximatearithmetic = [ "eapproximatearithmetic", "ebi_arithmetic/approximatearithmetic" ]
eapproximatearithmetic = []

[dependencies]
ebi_arithmetic = "0.3.7"
anyhow = "1.0.100"
ndarray = "0.17.1"
sprs = "0.11.4"
indexmap = "2.12.1"
rustc-hash = "2.1.1"
log = "0.4.29"
rayon = "1.11.0"
rand = "0.9.2"
parking_lot = "0.12.5"
pathfinding = "4.14.0"

[profile.release]
debug = false
strip = true
panic = 'abort'
opt-level = 3
lto = true
codegen-units = 1