[package]
name = "ebi_optimisation"
version = "0.3.8"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["stochastic-processes", "process-mining", "business-processes"]
categories = ["command-line-utilities"]
description = "Optimisation techniques for Ebi - a stochastic process mining utility"
homepage = "https://ebitools.org"
repository = "https://github.com/BPM-Research-Group/Ebi"
readme = "README.md"
exclude = ["/testfiles", "/manual", ".github/", ".*"]

[lib]
name = "ebi_optimisation"
crate-type = ["cdylib", "lib"]

[features]
default = []
eexactarithmetic = []
exactarithmetic = [ "eexactarithmetic", "ebi_arithmetic/exactarithmetic" ]
approximatearithmetic = [ "eapproximatearithmetic", "ebi_arithmetic/approximatearithmetic" ]
eapproximatearithmetic = []

[dependencies]
ebi_arithmetic = { git = "https://github.com/BPM-Research-Group/Ebi_arithmetic.git", version = "0.3.13" }
ndarray = "0.17.2"
sprs = "0.11.4"
indexmap = "2.14.0"
rustc-hash = "2.1.2"
log = "0.4.33"
rayon = "1.12.0"
parking_lot = "0.12.5"
pathfinding = "4.15.0"

[profile.release]
debug = false
strip = true
panic = 'abort'
opt-level = 3
lto = true
codegen-units = 1